Bug 43271: Always enable section collapsing html
Decide in javascript whether to collapse..

--- a/less/modules/editor.less
+++ b/less/modules/editor.less
@@ -9,14 +9,19 @@
 .section_heading {
 	.edit-page {
 		margin: 0 30px 0 0;
-		display: none !important;
+		display: none;
 		font-size: .65em;
 		font-family: @fontFamily;
 	}
 
 	&.openSection .edit-page {
-		display: block !important;
+		display: block;
 	}
+}
+
+.stub .edit-page {
+	margin: 0;
+	display: block;
 }
 
 .editor-overlay {
