--- a/stylesheets/modules/mf-toggle.css
+++ b/stylesheets/modules/mf-toggle.css
@@ -55,6 +55,13 @@ Change-Id: I683d029d09340a460b02016c5c4fbd6ada5a9b35
 .client-js .content_block.openSection {
   display: block;
 }
+.stub .section_heading {
+  background: none;
+  cursor: auto;
+}
+.stub .content_block {
+  display: block;
+}
 #content_wrapper .section {
   clear: both;
   border-bottom: solid 1px #E2E3E4;
